--- a/templates/store/store.html
+++ b/templates/store/store.html
@@ -30,13 +30,10 @@
                 <div class="card-body">
                     
                     <ul class="list-menu">
-                    <li><a href="#">People  </a></li>
-                    <li><a href="#">Watches </a></li>
-                    <li><a href="#">Cinema  </a></li>
-                    <li><a href="#">Clothes  </a></li>
-                    <li><a href="#">Home items </a></li>
-                    <li><a href="#">Animals</a></li>
-                    <li><a href="#">People </a></li>
+                        <li><a href="{% url 'store' %}">All Products</a></li>
+                        {% for category in links %}
+                            <li><a href="{{ category.get_url }}">{{ category.category_name }}</a></li>
+                        {% endfor %}
                     </ul>
     
                 </div> <!-- card-body.// -->
@@ -133,12 +130,12 @@
             <figure class="card card-product-grid">
                 <div class="img-wrap"> 
                     
-                    <img src="{{ product.images.url }}">
+                    <a href="{{ product.get_url }}"><img src="{{ product.images.url }}"></a>
                     
                 </div> <!-- img-wrap.// -->
                 <figcaption class="info-wrap">
                     <div class="fix-height">
-                        <a href="./product-detail.html" class="title">{{ product.product_name }}</a>
+                        <a href="{{ product.get_url}}" class="title">{{ product.product_name }}</a>
                         <div class="price-wrap mt-2">
                             <span class="price">${{ product.price }}</span>
                         </div> <!-- price-wrap.// -->
