--- a/templates/store/store.html
+++ b/templates/store/store.html
@@ -140,7 +140,7 @@
                             <span class="price">${{ product.price }}</span>
                         </div> <!-- price-wrap.// -->
                     </div>
-                    <a href="#" class="btn btn-block btn-primary">Add to cart </a>
+                    <a href="{% url 'add_to_cart' product.id %}" class="btn btn-block btn-primary">Add to cart </a>
                 </figcaption>
             </figure>
         </div> <!-- col.// -->
