--- a/templates/store/product_detail.html
+++ b/templates/store/product_detail.html
@@ -71,7 +71,12 @@
         {% if product.stock <= 0 %}
         <h5 class="text-danger"> Out of Stock </h5>
         {% else %}
-        <a href="{% url 'add_to_cart' product.id %}" class="btn  btn-primary"> <span class="text">Add to cart</span> <i class="fas fa-shopping-cart"></i>  </a>
+          {% if is_in_cart %}
+            <a href="#" class="btn  btn-success"> <span class="text">Added to Cart</span> <i class="fas fa-check"></i>  </a>
+            <a href="{% url 'cart' %}" class="btn  btn-outline-primary"> <span class="text">View Cart</span> <i class="fas fa-eye"></i>  </a>
+          {% else %}
+            <a href="{% url 'add_to_cart' product.id %}" class="btn  btn-primary"> <span class="text">Add to Cart</span> <i class="fas fa-shopping-cart"></i>  </a>
+          {% endif%}
         {% endif %}
     </article> <!-- product-info-aside .// -->
             </main> <!-- col.// -->
