--- a/templates/store/product_detail.html
+++ b/templates/store/product_detail.html
@@ -29,55 +29,35 @@
     
     
     <hr>
-        <div class="row">
-            <div class="item-option-select">
-                <h6>Choose Color</h6>
-                <div class="btn-group btn-group-sm btn-group-toggle" data-toggle="buttons">
-                  <label class="btn btn-light">
-                    <input type="radio" name="radio_color"> Silver
-                  </label>
-                  <label class="btn btn-light">
-                    <input type="radio" name="radio_color" > Gray
-                  </label>
-                  <label class="btn btn-light active">
-                    <input type="radio" name="radio_color checked"> Gold
-                  </label>
-                  <label class="btn btn-light">
-                    <input type="radio" name="radio_color"> Black
-                  </label>
-                </div> 
-            </div>
-        </div> <!-- row.// -->
-        <div class="row">
-            <div class="item-option-select">
-                <h6>Select Size</h6>
-                <div class="btn-group btn-group-sm btn-group-toggle" data-toggle="buttons">
-                  <label class="btn btn-light">
-                    <input type="radio" name="radio_color"> S
-                  </label>
-                  <label class="btn btn-light active">
-                    <input type="radio" name="radio_color" checked> M
-                  </label>
-                  <label class="btn btn-light">
-                    <input type="radio" name="radio_color"> L
-                  </label>
-                  <label class="btn btn-light">
-                    <input type="radio" name="radio_color"> XL
-                  </label>
-                </div> 
-            </div>
-        </div> <!-- row.// -->
-        <hr>
-        {% if product.stock <= 0 %}
-        <h5 class="text-danger"> Out of Stock </h5>
-        {% else %}
-          {% if is_in_cart %}
-            <a href="#" class="btn  btn-success"> <span class="text">Added to Cart</span> <i class="fas fa-check"></i>  </a>
-            <a href="{% url 'cart' %}" class="btn  btn-outline-primary"> <span class="text">View Cart</span> <i class="fas fa-eye"></i>  </a>
+        <form action="{% url 'add_to_cart' product.id %}" method="post">
+          {% csrf_token %}
+          <div class="row">
+              <div class="item-option-select">
+                  <h6>Choose Color</h6>
+                  <select name="color" class="form-control">
+                    {% for variation in product.variation_set.colors %}
+                      <option value="{{ variation.variation_value }}">{{ variation.variation_value | capfirst }}</option>
+                    {% endfor %}
+                  </select>
+              </div>
+          </div> <!-- row.// -->
+          <div class="row">
+              <div class="item-option-select">
+                  <h6>Select Size</h6>
+                  <select name="size" class="form-control">
+                    {% for variation in product.variation_set.sizes %}
+                      <option value="{{ variation.variation_value }}">{{ variation.variation_value | capfirst }}</option>
+                    {% endfor %}
+                  </select>
+              </div>
+          </div> <!-- row.// -->
+          <hr>
+          {% if product.stock <= 0 %}
+          <h5 class="text-danger"> Out of Stock </h5>
           {% else %}
-            <a href="{% url 'add_to_cart' product.id %}" class="btn  btn-primary"> <span class="text">Add to Cart</span> <i class="fas fa-shopping-cart"></i>  </a>
-          {% endif%}
-        {% endif %}
+              <button type="submit" class="btn  btn-primary"> <span class="text">Add to Cart</span> <i class="fas fa-shopping-cart"></i>  </button>
+          {% endif %}
+        </form>
     </article> <!-- product-info-aside .// -->
             </main> <!-- col.// -->
         </div> <!-- row.// -->
