--- a/templates/accounts/login.html
+++ b/templates/accounts/login.html
@@ -5,6 +5,15 @@
 <!-- ========================= SECTION CONTENT ========================= -->
 <section class="section-conten padding-y" style="min-height:84vh">
 
+    {% if request.GET.command == 'validate' %}
+    <div class="container">
+        <div class="alert alert-info text-center" role="alert">
+            Thank you for registering with us. We have sent you a verification email on your email address [{{ request.GET.email }}]
+            <br><br>
+            Already verified ? <a href="{% url 'login' %}">Login</a>
+        </div>
+    </div>
+    {% else %}
     <!-- ============================ COMPONENT LOGIN   ================================= -->
         <div class="card mx-auto" style="max-width: 380px; margin-top:100px;">
           <div class="card-body">
@@ -34,7 +43,7 @@
          <br><br>
     <!-- ============================ COMPONENT LOGIN  END.// ================================= -->
     
-    
+    {% endif %}
     </section>
     <!-- ========================= SECTION CONTENT END// ========================= -->
 
