--- a/templates/accounts/forgot_password.html
+++ b/templates/accounts/forgot_password.html
@@ -4,36 +4,23 @@
 
 <!-- ========================= SECTION CONTENT ========================= -->
 <section class="section-conten padding-y" style="min-height:84vh">
-
-    {% if request.GET.command == 'validate' %}
-    <div class="container">
-        <div class="alert alert-info text-center" role="alert">
-            Thank you for registering with us. We have sent you a verification email on your email address [{{ request.GET.email }}]
-            <br><br>
-            Already verified ? <a href="{% url 'login' %}">Login</a>
-        </div>
-    </div>
-    {% else %}
     <!-- ============================ COMPONENT LOGIN   ================================= -->
         <div class="card mx-auto" style="max-width: 380px; margin-top:100px;">
           <div class="card-body">
-          <h4 class="card-title mb-4">Sign in</h4>
+          <h4 class="card-title mb-4">Forgot Password</h4>
           {% include 'includes/alerts.html' %}
-          <form action="{% url 'login' %}" method="post">
+          <form action="{% url 'forgot_password' %}" method="post">
             {% csrf_token %}
               <div class="form-group">
                  <input type="email" class="form-control" placeholder="Email Address" name="email">
               </div> <!-- form-group// -->
-              <div class="form-group">
-                <input type="password" class="form-control" placeholder="Password" name="password">
-              </div> <!-- form-group// -->
               
               <div class="form-group">
-                  <a href="{% url 'forgot_password'%}" class="float-right">Forgot password?</a> 
+                  <a href="{% url 'login' %}" class="float-right">Already Have Password? Login</a> 
                
               </div> <!-- form-group form-check .// -->
               <div class="form-group">
-                  <button type="submit" class="btn btn-primary btn-block"> Login  </button>
+                  <button type="submit" class="btn btn-primary btn-block"> Submit  </button>
               </div> <!-- form-group// -->    
           </form>
           </div> <!-- card-body.// -->
@@ -42,8 +29,6 @@
          <p class="text-center mt-4">Don't have account? <a href="{% url 'register' %}">Sign up</a></p>
          <br><br>
     <!-- ============================ COMPONENT LOGIN  END.// ================================= -->
-    
-    {% endif %}
     </section>
     <!-- ========================= SECTION CONTENT END// ========================= -->
 
