Added order app and payment functionality

--- a/templates/store/checkout.html
+++ b/templates/store/checkout.html
@@ -13,7 +13,8 @@
     <div class="card">
         <div class="card-body">
             <h4 class="card-title mb-4"> Billing Address</h4>
-            <form action="" method="post">
+            <form action="{% url 'place_order' %}" method="post">
+                {% csrf_token %}
                 <div class="form-row">
                     <div class="col form-group">
                         <label for=""> First name</label>
@@ -31,7 +32,7 @@
                     </div>
                     <div class="col form-group">
                         <label for=""> Phone Number</label>
-                        <input type="text" name="phone_number" class="form-control" required>
+                        <input type="text" name="phone" class="form-control" required>
                     </div>
                 </div>
                 <div class="form-row">
