--- a/templates/store/product_detail.html
+++ b/templates/store/product_detail.html
@@ -10,14 +10,23 @@
         <div class="row no-gutters">
             <aside class="col-md-6">
     <article class="gallery-wrap"> 
-        <div class="img-big-wrap">
-           <a href="#"><img src="{{ product.images.url }}"></a>
+        <div class="img-big-wrap mainImage">
+           <img src="{{ product.images.url }}">
         </div> <!-- img-big-wrap.// -->
         
     </article> <!-- gallery-wrap .end// -->
+    <ul class="thumb">
+        <li>
+            <a href="{{ product.images.url }}" target="mainImage"><img src="{{ product.images.url }}" alt="Product Image"></a>
+            {% for i in product_gallery %}
+                <a href="{{i.image.url}}" target="mainImage"><img src="{{i.image.url}}" alt="Product Image"></a>
+            {% endfor %}
+        </li>
+    </ul>
             </aside>
             <main class="col-md-6 border-left">
     <article class="content-body">
+        
     
     <h2 class="title">{{ product.product_name }}</h2>
     <div class="rating-star">
